Admin: Update Docs to point to getmoto

--- a/moto/moto_server/templates/dashboard.html
+++ b/moto/moto_server/templates/dashboard.html
@@ -176,9 +176,9 @@
             <h4 class="modal-title" id="myModalLabel">About Moto</h4>
           </div>
           <div class="modal-body">
-            <p>Moto was created by <a href="https://twitter.com/spulec">Steve Pulec</a> and <a href="https://github.com/spulec/moto/blob/master/AUTHORS.md">many other contributors</a>.</p>
+            <p>Moto was created by <a href="https://twitter.com/spulec">Steve Pulec</a> and <a href="https://github.com/getmoto/moto/blob/master/AUTHORS.md">many other contributors</a>.</p>
 
-            <p>Please open any issues <a href="https://github.com/spulec/moto/issues">here</a>.</p>
+            <p>Please open any issues <a href="https://github.com/getmoto/moto/issues">here</a>.</p>
           </div>
         </div>
       </div>
